2002-06-20  Sam Steingold  <sds@gnu.org>

	* record.d (COPY-STRUCTURE): use memcpy() instead of dotimespC

2002-06-20  Sam Steingold  <sds@gnu.org>

	* spvw_typealloc.d (reallocate_small_string) [TYPECODES]:
	fixed a typo

2002-06-19  Sam Steingold  <sds@gnu.org>

	* pathname.d (nametype_diff_aux): treat logical and physical
	pathnames the same way

2002-06-19  Sam Steingold  <sds@gnu.org>

	* encoding.d (MAKE-ENCODING): new keyword argument
	:IF-DOES-NOT-EXIST to return nil for non-existing charsets
	(init_encodings_2): when the charset does not exist,
	just unintern the symbol
	(encoding_from_name): pushSTACK() the extra keyword argument for
	C_make_encoding()
	* subr.d, subrkw.d (make_encoding): new keyword argument
	* lispbibl.d (check_charset): return bool
	* stream.d (open_iconv): do not barf when charset is nullobj
	(check_charset): return false when code is invalid and charset is
	nullobj

2002-06-19  Bruno Haible  <bruno@clisp.org>

	* constsym.d (CHARSET:ARMSCII-8, CHARSET:TCVN): Disable in glibc-2.2.

2002-06-19  Sam Steingold  <sds@gnu.org>

	new built-in MEMQ == MEMBER :TEST #'EQ
	* list.d (MEMQ): new function (uses memq)
	* constsym.d, subr.d (memq): define
	* clos.lisp, compiler.lisp, defstruct.lisp, describe.lisp:
	* init.lisp, type.lisp: use it instead of MEMBER :TEST #'EQ

2002-06-17  Sam Steingold  <sds@gnu.org>

	abstracted some code
	* list.d (memq): new function
	* lispbibl.d (memq): declare
	* control.d (PROCLAIM, KEYWORD-TEST): use it
	* eval.d (augment_decl_env): ditto
	* io.d (interpret_feature): ditto
	* package.d (symtab_find, symtab_delete, shadowing_find)
	(use_package, %IN-PACKAGE, FIND-ALL-SYMBOLS, RE-EXPORT): ditto
	* symbol.d (GET-PROPERTIES): ditto
	* record.d (obj_in_list): removed (superseded by memq)
	(structure_up, %STRUCTURE-TYPE-P, keyword_test, slot_in_arglist)
	(%SHARED-INITIALIZE): use !null(memq()) instead of obj_in_list()

2002-06-17  Sam Steingold  <sds@gnu.org>
